--- a/contact.html
+++ b/contact.html
@@ -63,22 +63,26 @@
         <!-- Desktop Navigation -->
         <nav class="nav">
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/categories.html">Categories</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">More</a></li>
+                <li><a href="#">Home</a></li>
+            <li><a href="/categories.html">Categories</a></li>
+            <li><a href="/product.html">Products</a></li>
+            <li><a href="#">About Us</a></li>
+            <!-- <li><a href="#">Gallery</a></li>
+            <li><a href="#">More</a></li> -->
+             <li><a href="/blog.html">Blog</a></li>
+            <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
         <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
-            <a href="#">Home</a>
-            <a href="#">Categories</a>
-            <a href="#">Products</a>
+            <a href="/index.html">Home</a>
+            <a href="/categories.html">Categories</a>
+            <a href="/product.html">Products</a>
             <a href="#">About Us</a>
-            <a href="#">Gallery</a>
-            <a href="#">More</a>
+            <!-- <a href="#">Gallery</a>
+            <a href="#">More</a> -->
+            <a href="/blog.html">Blog</a>
+            <a href="/contact.html">Contact</a>
         </div>
     </header>
     <!-- ======= End Header ======= -->
