--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="content">
                <h1>The World's Finest Crockeries<br>Are Here.</h1>
                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
-                  mattis, pulvinar dapibus leo. Lorem ipsum dolor sit amet
+                  mattis, pulvinar dapibus leo. 
                </p>
                <div class="buttons">
                   <a href="#" class="btn btn-shop">SHOP COLLECTION</a>
@@ -532,17 +532,37 @@
    </section>
    <!-- insagram -->
    <section class="instagram-section">
-      <div class="container">
-         <h2 class="insta-title">Follow us on @Instagram</h2>
+  <div class="container">
 
-         <div class="instagram-img">
-            <div><img src="assets/images/banner/insat-1.png" alt=""></div>
-            <div><img src="assets/images/banner/insat-2.png" alt=""></div>
-            <div><img src="assets/images/banner/insat-3.png" alt=""></div>
-            <div><img src="assets/images/banner/insat-4.png" alt=""></div>
-         </div>
+    <h2 class="insta-title">Follow us on @Instagram</h2>
+
+    <div class="instagram-img">
+
+      <div class="insta-box">
+        <img src="assets/images/banner/insat-1.png" alt="">
+        <i class="fab fa-instagram insta-icon"></i>
       </div>
-   </section>
+
+      <div class="insta-box">
+        <img src="assets/images/banner/insat-2.png" alt="">
+        <i class="fab fa-instagram insta-icon"></i>
+      </div>
+
+      <div class="insta-box">
+        <img src="assets/images/banner/insat-3.png" alt="">
+        <i class="fab fa-instagram insta-icon"></i>
+      </div>
+
+      <div class="insta-box">
+        <img src="assets/images/banner/insat-4.png" alt="">
+        <i class="fab fa-instagram insta-icon"></i>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 
    <!-- ======= footer starat ======= -->
    <footer>
